k8s/dev/ortopedica-api/3.ortopedica-api-deployment.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: ortopedica-api
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: ortopedica-api
        service: ortopedica-api
    spec:
      containers:
      - name: ortopedica-api
        image: fernandoe/fe-ortopedica-api:0.0.1
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
