k8s/dev/ortopedica-api/4.ortopedica-api-service.yml
apiVersion: v1
kind: Service
metadata:
  name: ortopedica-api
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8000
  selector:
    app: ortopedica-api
