k8s/dev/ortopedica-api/6.ortopedica-api-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ortopedica-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: ortopedica-api.dev.fernandoe.com
      http:
        paths:
          - backend:
              serviceName: ortopedica-api
              servicePort: 80
  tls:
    - hosts:
        - ortopedica-api.dev.fernandoe.com
      secretName: ortopedica-api-dev-fernandoe-com-tls
